--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,17 @@ dock_6="RidiculousCodingDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/sign.tscn", "res://scenes/death_screen.tscn")
+open_scenes=PackedStringArray("res://scenes/hyrule.tscn", "res://scenes/sign.tscn", "res://scenes/death_screen.tscn", "res://scenes/phoenix.tscn")
 current_scene="res://scenes/death_screen.tscn"
 center_split_offset=-270
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/chest.gd", "res://scripts/door.gd", "res://scripts/global.gd", "res://scripts/gold_ruppee.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://scripts/purple_ruppee.gd", "res://scripts/red_ruppee.gd", "res://scripts/save.gd", "res://scenes/sign.gd", "res://scripts/slime.gd", "res://scripts/death_screen.gd", "res://scenes/sword_item.gd"]
-selected_script="res://scripts/phoenix.gd"
+open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/chest.gd", "res://scripts/death_screen.gd", "res://scripts/door.gd", "res://scripts/global.gd", "res://scripts/gold_ruppee.gd", "res://scripts/green_ruppee.gd", "res://scripts/phoenix.gd", "res://scripts/purple_ruppee.gd", "res://scripts/red_ruppee.gd", "res://scripts/save.gd", "res://scenes/sign.gd", "res://scripts/slime.gd", "res://scenes/sword_item.gd"]
+selected_script="res://scripts/death_screen.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=150
 list_split_offset=0
