--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([13, 26]),
 "h_scroll_position": 0,
 "row": 29,
-"scroll_position": 24.0,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -53,11 +53,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": Array[int]([12, 21, 28, 33, 36, 39, 48, 50]),
+"column": 30,
+"folded_lines": Array[int]([12, 16, 36, 41, 44, 47, 56, 58]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 3.0,
+"row": 32,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,7 +123,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
@@ -233,6 +233,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/heart.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
