--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/sfx/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/door.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://misc/", "res://assets/sfx/")
 dock_6_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_6="RidiculousCodingDock"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
+open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/hyrule.tscn", "res://scenes/phoenix.tscn", "res://scenes/death_screen.tscn", "res://scenes/sword_cave.tscn", "res://scenes/door.tscn")
+current_scene="res://scenes/sword_cave.tscn"
 center_split_offset=-270
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/chest.gd", "res://scripts/death_screen.gd", "res://scripts/door.gd", "res://scripts/global.gd", "res://scripts/gold_ruppee.gd", "res://scripts/green_ruppee.gd", "res://scripts/heart.gd", "res://scripts/hyrule.gd", "res://scripts/phoenix.gd", "res://scripts/purple_ruppee.gd", "res://scripts/red_ruppee.gd", "res://scripts/save.gd", "res://scripts/sign.gd", "res://scripts/slime.gd", "res://scripts/sword_item.gd"]
-selected_script="res://scripts/sign.gd"
+open_scripts=["res://scripts/blue_ruppee.gd", "res://scripts/boko.gd", "res://scripts/bomb_item.gd", "res://scripts/chest.gd", "res://scripts/death_screen.gd", "res://scripts/door.gd", "res://scripts/global.gd", "res://scripts/gold_ruppee.gd", "res://scripts/green_ruppee.gd", "res://scripts/heart.gd", "res://scripts/hyrule.gd", "res://scripts/phoenix.gd", "res://scripts/purple_ruppee.gd", "res://scripts/red_ruppee.gd", "res://scripts/save.gd", "res://scripts/sign.gd", "res://scripts/slime.gd", "res://scripts/start.gd", "res://scripts/sword_item.gd"]
+selected_script="res://scripts/door.gd"
 open_help=["CharacterBody2D"]
 script_split_offset=150
 list_split_offset=0
