--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 13.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 22,
-"selection_to_column": 36,
-"selection_to_line": 24,
+"row": 20,
+"scroll_position": 19.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 0,
 "folded_lines": Array[int]([13, 26]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 30.0,
+"row": 116,
+"scroll_position": 92.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -197,10 +193,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -229,7 +225,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 9.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -261,6 +257,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/start.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
