--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -5,9 +5,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 16,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 6,
 "row": 10,
-"scroll_position": 1.0,
+"scroll_position": 10.0,
 "selection": true,
 "selection_from_column": 16,
 "selection_from_line": 10,
@@ -21,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([13, 26]),
+"column": 14,
+"folded_lines": Array[int]([13, 15, 26]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 21.0,
+"row": 15,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,10 +105,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -275,6 +275,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/swimmable_water.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([4, 14, 17]),
+"h_scroll_position": 0,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
