--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 6,
-"row": 10,
-"scroll_position": 10.0,
-"selection": true,
-"selection_from_column": 16,
-"selection_from_line": 10,
-"selection_to_column": 25,
-"selection_to_line": 10,
+"row": 31,
+"scroll_position": 16.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([13, 15, 26]),
+"column": 30,
+"folded_lines": Array[int]([13, 15, 26, 129]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 13.0,
+"row": 136,
+"scroll_position": 110.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -271,10 +267,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 60,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -285,11 +281,29 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([4, 14, 17]),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 7,
+"selection_to_column": 27,
+"selection_to_line": 7,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/bomb.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 18,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
-"scroll_position": 0.0,
+"scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
